@@ -5719,7 +5719,6 @@ static const u32 sTMHMLearnsets[][4] =
      | TMHMA(TM22_SOLARBEAM)
      | TMHMA(TM27_MEGA_PUNCH)
      | TMHMA(TM32_PSYCH_UP)
-     | TMHMA(TM34_FOCUS_BLAST)
      | TMHMA(TM42_FACADE)
      | TMHMA(TM43_SECRET_POWER)
      | TMHMA(TM44_REST)
