@@ -1,10 +1,14 @@
 v1.0.4
 
-New item: Zener Cards, an Expert Belt clone.
+New item: Zener Cards, a reflavored Expert Belt.
 New move: Anoxic Fumes, a Miasma-type overheat.
  -It is learned naturally by TYukari, Medicine, TMedicine, Sannyo, and Momoyo.
  -It can be tutored to all Nue forms.
+TM02 Frustration actually exists now, replacing the Mistress in Rocket Hideout.
+ -It's on a new flag now, so old saves can go back and get it.
+Speed Aya no longer learns Focus Blast.
 Twin Spark now works with Earthquake and Magnitude properly.
+The S.S. Anne no longer dumps radioactive waste into the harbor.
 Some sprite fixes.
 Some text fixes.
 
